--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
 <body>
   <section class="awesome">
     <div class="container">
-        <h2 class="title">Why this is awesome</h2>
+        <h2 class="title"> Why this is awesome</h2>
         <div class="line"></div>   
+    </div>
+
+    <div class="awesome-row">
+      <div class="awesome-card">
+        <div class="awesome-content">
+          <div class="awesome-img">
+            <img src="./img/lamp.png" alt="#">
+          </div>
+          <h3 class="awesome-card-title">
+            Thoughtful Design
+          </h3>
+          <div class="awesome-card-text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias commodi illum molestiae repudiandae, tempore eius quas voluptate repellat, labore quam reiciendis!
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </section>
