--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="awesome-card">
         <div class="awesome-content">
           <div class="awesome-img">
-            <img src="./img/lamp.png" alt="#">
+            <img src="./img/icon/lamp.png" alt="#">
           </div>
           <h3 class="awesome-card-title">
             Thoughtful Design
@@ -38,7 +38,7 @@
       <div class="awesome-card">
         <div class="awesome-content">
           <div class="awesome-img">
-            <img src="./img/keyboard.png" alt="#">
+            <img src="./img/icon/keyboard.png" alt="#">
           </div>
           <h3 class="awesome-card-title">
             Well Crafted
@@ -55,7 +55,7 @@
       <div class="awesome-card">
         <div class="awesome-content">
           <div class="awesome-img">
-            <img src="./img/lightning.png" alt="#">
+            <img src="./img/icon/lightning.png" alt="#">
           </div>
           <h3 class="awesome-card-title">
             Easy to Customize
