add common structure for costomers section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <h2 class="title"> Why this is awesome</h2>
       <div class="line"></div>   
       <div class="subtitle">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
       </div>
 
       <div class="awesome-row">
@@ -76,8 +78,10 @@
       <h2 class="title">Pricing options</h2>
       <div class="line"></div>
       <div class="subtitle">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p> 
+        </div>
       <div class="pricing-row">
         <div class="pricing-card">
           <ul class="pricing-card-list">
@@ -92,6 +96,7 @@
               <li class="pricing-card-list-item">1 gb of space</li>
           </ul>
         </div>
+
         <div class="pricing-card">
           <ul class="pricing-card-list">
               <li class="pricing-card-list-item  pricing-card-list-item___black-name">Optima</li>
@@ -105,6 +110,7 @@
               <li class="pricing-card-list-item">1 gb of space</li>
           </ul>
         </div>
+
         <div class="pricing-card">
           <ul class="pricing-card-list">
               <li class="pricing-card-list-item  pricing-card-list-item___black-name">Pro</li>
@@ -119,6 +125,50 @@
           </ul>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="customers">
+    <div class="container">
+      <h2 class="title"> What our customers saying</h2>
+      <div class="line"></div>   
+      <div class="subtitle">
+        <p>
+          ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+      </div>
+
+      <div class="customers-row">
+        <div class="customers-card">
+          <div class="customers-card-content">
+            <div class="customers-card-text">
+              <p>
+                Lorem ipsum dolor sit amet, 
+                consectetur adipisicing elit. Doloribus 
+                accusamus expedita repellat similique 
+                odio aspernatur ex, architecto eaque 
+                quo suscipit.
+              </p>
+            </div>
+            <div class="customers-card-author">
+              <div class="customers-card-author-img">
+                <img src="#" alt="">
+              </div>
+              <h3 class="customers-card-name">
+                Jeremy H.
+              </h3>
+              <div class="customers-card-vacancy">
+                <p>
+                  Manager
+                </p>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </section>
 </body>
