Add cards structure

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="customers-card-author">
               <div class="customers-card-author-img">
-                <img src="#" alt="">
+                <img src="./img/./customers/Cat.webp" alt="">
               </div>
               <h3 class="customers-card-name">
                 Jeremy H.
