section axure done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <section class="awesome">
     <div class="container">
       <h2 class="title"> Why this is awesome</h2>
-      <div class="line"></div>   
       <div class="subtitle">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -76,7 +75,6 @@
   <section class="pricing">
     <div class="container">
       <h2 class="title">Pricing options</h2>
-      <div class="line"></div>
       <div class="subtitle">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -131,10 +129,9 @@
   <section class="customers">
     <div class="container">
       <h2 class="title"> What our customers saying</h2>
-      <div class="line"></div>   
       <div class="subtitle">
         <p>
-          ipsum dolor sit amet consectetur adipisicing elit.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
       </div>
 
@@ -149,25 +146,106 @@
                 odio aspernatur ex, architecto eaque 
                 quo suscipit.
               </p>
+              <div class="triangle"></div>
             </div>
             <div class="customers-card-author">
               <div class="customers-card-author-img">
                 <img src="./img/./customers/Cat.webp" alt="">
               </div>
-              <h3 class="customers-card-name">
-                Jeremy H.
-              </h3>
-              <div class="customers-card-vacancy">
-                <p>
-                  Manager
-                </p>
+              <div class="customers-card-author-description">
+                <div class="customers-card-name">
+                  <p>
+                    Jeremy H.
+                  </p>
+                </div>
+                <div class="customers-card-vacancy">
+                  <p>
+                    Manager
+                  </p>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="customers-card">
+          <div class="customers-card-content">
+            <div class="customers-card-text">
+              <p>
+                Lorem ipsum dolor sit amet, 
+                consectetur adipisicing elit. Doloribus 
+                accusamus expedita repellat similique 
+                odio aspernatur ex, architecto eaque 
+                quo suscipit.
+              </p>
+              <div class="triangle"></div>
+            </div>
+            <div class="customers-card-author">
+              <div class="customers-card-author-img">
+                <img src="./img/./customers/dog.jpg" alt="">
+              </div>
+              <div class="customers-card-author-description">
+                <div class="customers-card-name">
+                  <p>
+                    Toni K.
+                  </p>
+                </div>
+                <div class="customers-card-vacancy">
+                  <p>
+                    Manager
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="customers-card">
+          <div class="customers-card-content">
+            <div class="customers-card-text">
+              <p>
+                Lorem ipsum dolor sit amet, 
+                consectetur adipisicing elit. Doloribus 
+                accusamus expedita repellat similique 
+                odio aspernatur ex, architecto eaque 
+                quo suscipit.
+              </p>
+              <div class="triangle"></div>
+            </div>
+            <div class="customers-card-author">
+              <div class="customers-card-author-img">
+                <img src="./img/./customers/panda.jpg" alt="">
+              </div>
+              <div class="customers-card-author-description">
+                <div class="customers-card-name">
+                  <p>
+                    Monika F.
+                  </p>
+                </div>
+                <div class="customers-card-vacancy">
+                  <p>
+                    Manager
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+    </div>
+  </section>
 
+  <section class="axure">
+    <div class="container">
+      <h2 class="title title-color">
+        STYLISH AXURE DESIGN
+      </h2>
+      <div class="subtitle subtitle-color">
+        <p>
+          Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
+        </p>
+      </div>
+        <button class="button">Dounload</button>
 
     </div>
   </section>
