--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <title>Axit</title>
 </head>
 <body>
+
+  <header class="header">
+    <div class="container">
+      <div class="header-row">
+        <div class="logo">Ax</div>
+        <nav class="header-info">
+          <ul class="navigation-list">
+            <li class="navigation-list-item">Feautures</li>
+            <li class="navigation-list-item">About</li>
+            <li class="navigation-list-item">Pricing</li>
+            <li class="navigation-list-item">Reviews</li>
+            <li class="navigation-list-item">Contact</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
   <section class="awesome">
     <div class="container">
       <h2 class="title"> Why this is awesome</h2>
