--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
     </div>
   </header>
 
+  <section class="axit">
+    <div class="container">
+      <div class="axit-card">
+        <div class="axit-card-content">
+          <div class="logo">Ax</div>
+          <div class="axit-card-content-text">
+            <span>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="social">
+    <div class="container">
+      <div class="social-row">
+        <div class="social-row-content">
+          <h3 class="social-row-title">
+            social media
+          </h3>
+          <div class="social-row-text">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi est impedit hic.
+            </p>
+          </div>
+        </div>
+        <nav class="social-info">
+          <a href="https://ru.wikipedia.org/wiki/Facebook"><i class="fa-brands fa-facebook change"></i></a>
+          <a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B2%D0%B8%D1%82%D1%82%D0%B5%D1%80"><i class="fa-brands fa-twitter change"></i></a>
+          <a href="https://www.google.ru/"><i class="fa-brands fa-google-plus-g change"></i></a>
+          <a href="https://ru.wikipedia.org/wiki/Psiphon"><i class="fa-brands fa-pinterest change"></i></a>
+          <a href="https://ru.wikipedia.org/wiki/Instagram"><i class="fa-brands fa-instagram change"></i></a>
+          <a href="#"><i class="fa-brands fa-stumbleupon change"></i></a>
+          <a href="https://www.tp-link.com/ru/wifi/"><i class="fa-solid fa-wifi change"></i></a>
+        </nav>
+      </div>
+    </div>
+  </section>
+  
   <section class="awesome">
     <div class="container">
       <h2 class="title"> Why this is awesome</h2>
@@ -39,7 +78,7 @@
         <div class="awesome-card">
           <div class="awesome-content">
             <div class="awesome-img">
-              <img src="./img/icon/lamp.png" alt="#">
+              <i class="fa-solid fa-lightbulb"></i>
             </div>
             <h3 class="awesome-card-title">
               Thoughtful Design
@@ -56,7 +95,7 @@
         <div class="awesome-card">
           <div class="awesome-content">
             <div class="awesome-img">
-              <img src="./img/icon/keyboard.png" alt="#">
+              <i class="fa-solid fa-keyboard"></i>
             </div>
             <h3 class="awesome-card-title">
               Well Crafted
@@ -73,7 +112,7 @@
         <div class="awesome-card">
           <div class="awesome-content">
             <div class="awesome-img">
-              <img src="./img/icon/lightning.png" alt="#">
+              <i class="fa-solid fa-bolt-lightning"></i>
             </div>
             <h3 class="awesome-card-title">
               Easy to Customize
@@ -264,8 +303,28 @@
         </p>
       </div>
         <button class="button">Dounload</button>
-
     </div>
   </section>
 </body>
 </html>
+
+<section class="footer">
+  <div class="container">
+    <div class="footer-row">
+      <nav class="footer-info">
+        <a href="https://ru.wikipedia.org/wiki/Facebook"><i class="fa-brands fa-facebook cellar"></i></a>
+        <a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B2%D0%B8%D1%82%D1%82%D0%B5%D1%80"><i class="fa-brands fa-twitter cellar"></i></a>
+        <a href="https://www.google.ru/"><i class="fa-brands fa-google-plus-g cellar"></i></a>
+        <a href="https://ru.wikipedia.org/wiki/Psiphon"><i class="fa-brands fa-pinterest cellar"></i></a>
+        <a href="https://ru.wikipedia.org/wiki/Instagram"><i class="fa-brands fa-instagram cellar"></i></a>
+        <a href="#"><i class="fa-brands fa-stumbleupon cellar"></i></a>
+        <a href="https://www.tp-link.com/ru/wifi/"><i class="fa-solid fa-wifi cellar"></i></a>
+      </nav>
+      <div class="footer-row-text">
+        <p>
+          (c) 2015 Axure Themes
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
