--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container">
       <div class="header-row">
-        <div class="logo">Ax</div>
+        <span class="logo">Ax</span>
         <nav class="header-info">
           <ul class="navigation-list">
             <li class="navigation-list-item">Feautures</li>
@@ -30,12 +30,44 @@
     <div class="container">
       <div class="axit-card">
         <div class="axit-card-content">
-          <div class="logo">Ax</div>
+          <div class="axit-logo">Ax</div>
           <div class="axit-card-content-text">
             <span>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</span>
           </div>
+          <div class="axit-subtitle">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo.
+            </p>
+          </div>
+          <button class="axit-button">Dounload</button>
         </div>
       </div>
+
+      <!-- <form action="#" name="free trail" method="post">
+        <div class="form-content">
+          <div class="form-title">
+            <h3 class="form-title-text">
+              try your
+              <span class="form-title">free</span>
+              trial today
+            </h3>
+          </div>
+          <div>
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name">
+          </div>
+          <div>
+            <label for="enaim">Enaim</label>
+            <input type="email" name="email" id="email">
+          </div>
+          <div>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+          </div>
+        </div>
+        <button type="submit">Get Started</button>
+      </form> -->
+
     </div>
   </section>
 
@@ -61,6 +93,43 @@
           <a href="#"><i class="fa-brands fa-stumbleupon change"></i></a>
           <a href="https://www.tp-link.com/ru/wifi/"><i class="fa-solid fa-wifi change"></i></a>
         </nav>
+      </div>
+    </div>
+  </section>
+
+  <section class="tabs">
+    <div class="container">
+      <div class="tabs-row">
+        <div class="tabs-card">
+          <div class="tabs-item">
+            <p>tab 1</p>
+          </div>
+          <div class="tabs-item">
+            <p>tab 2</p>
+          </div>
+          <div class="tabs-item">
+            <p>tab 3</p>
+          </div>
+        </div>
+        <div class="tabs-content">
+          <div class="tabs-content-item">
+            <div class="tabs-content-item-left">
+              <h3 class="tabs-title">tabs with soft transitioning effect.</h3>
+              <div class="tabs-text">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel perferendis quo enim, iste magnam nihil eaque quibusdam temporibus cum ratione sunt illum sequi quae eligendi odio deserunt vero distinctio rerum consequuntur minima ea harum voluptates dicta!</p>
+              </div>
+              <div class="tabs-text">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nisi quia a?</p>
+              </div>
+              <button class="tabs-button">dounload</button>
+            </div>
+            <div class="tabs-content-item-right">
+              <div class="tabs-img">
+                <img src="./img/tabs/image_right_u255@1X 1.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
