--- a/index.html
+++ b/index.html
@@ -28,48 +28,70 @@
 
   <section class="axit">
     <div class="container">
-      <div class="axit-card">
-        <div class="axit-card-content">
-          <div class="axit-logo">Ax</div>
-          <div class="axit-card-content-text">
-            <span>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</span>
-          </div>
-          <div class="axit-subtitle">
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo.
-            </p>
-          </div>
-          <button class="axit-button">Dounload</button>
+      <div class="axit-row">
+        <div class="axit-card">
+          <span class="axit-card-span">Ax</span>
+          <h1 class="axit-card-title">
+            Modern axure template for beautiful prototypes
+          </h1>
+        </div>
+
+        <div class="axit-form">
+          
+
         </div>
       </div>
-
-      <!-- <form action="#" name="free trail" method="post">
-        <div class="form-content">
-          <div class="form-title">
-            <h3 class="form-title-text">
-              try your
-              <span class="form-title">free</span>
-              trial today
-            </h3>
-          </div>
-          <div>
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name">
-          </div>
-          <div>
-            <label for="enaim">Enaim</label>
-            <input type="email" name="email" id="email">
-          </div>
-          <div>
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password">
-          </div>
-        </div>
-        <button type="submit">Get Started</button>
-      </form> -->
-
     </div>
   </section>
+
+
+  <!-- <section class="axit">
+    <div class="container">
+      <div class="axit-row">
+        <div class="axit-card">
+          <div class="axit-card-content">
+            <div class="axit-logo">Ax</div>
+            <div class="axit-card-content-text">
+              <span>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</span>
+            </div>
+            <div class="axit-subtitle">
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo.
+              </p>
+            </div>
+            <button class="axit-button">Dounload</button>
+          </div>
+        </div>
+
+        <div class="axit-form">
+          <form action="#" name="free trail" method="post">
+            <div class="form-content">
+              <div class="form-title">
+                <h3 class="form-title-text">
+                  try your
+                  <span class="form-title">free</span>
+                  trial today
+                </h3>
+              </div>
+              <div>
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name">
+              </div>
+              <div>
+                <label for="enaim">Enaim</label>
+                <input type="email" name="email" id="email">
+              </div>
+              <div>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
+              </div>
+            </div>
+            <button type="submit">Get Started</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section> -->
 
   <section class="social">
     <div class="container">
