--- a/index.html
+++ b/index.html
@@ -34,10 +34,37 @@
           <h1 class="axit-card-title">
             Modern axure template for beautiful prototypes
           </h1>
+        <div class="axit-card-text">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati!
+          </p>
+        </div>
+        <button class="axit-card-button">Dounload</button>
         </div>
 
         <div class="axit-form">
-          
+            <form action="#" name="free trail" methot="post">
+              <div class="axit-form-content">
+                <h4 class="axit-form-title">
+                  Try your
+                  <span class="form-span">Free</span>
+                  Trial today
+                </h4>
+                <div class="axit-form-item">
+                  <label for="name">Name</label>
+                  <input type="text" name="name" id="name">
+                </div>
+                <div class="axit-form-item">
+                  <label for="email">Email</label>
+                  <input type="email" name="email" id="email">
+                </div>
+                <div class="axit-form-item">
+                  <label for="password">Password</label>
+                  <input type="password" name="password" id="password">
+                </div>
+              </div>
+              <button type="submit">Get started</button>
+            </form>
 
         </div>
       </div>
