--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
         </div>
 
         <div class="axit-form">
-            <form action="#" name="free trail" methot="post">
-              <div class="axit-form-content">
-                <h4 class="axit-form-title">
-                  Try your
-                  <span class="form-span">Free</span>
-                  Trial today
-                </h4>
-                <div class="axit-form-item">
-                  <label for="name">Name</label>
-                  <input type="text" name="name" id="name">
-                </div>
-                <div class="axit-form-item">
-                  <label for="email">Email</label>
-                  <input type="email" name="email" id="email">
-                </div>
-                <div class="axit-form-item">
-                  <label for="password">Password</label>
-                  <input type="password" name="password" id="password">
-                </div>
+          <form action="#" name="free trail" methot="post">
+            <div class="axit-form-content">
+               <h4 class="axit-form-title">
+                 Try your
+                <span class="form-span">Free</span>
+                Trial today
+              </h4>
+              <div class="axit-form-item">
+                <label class="axit-label" for="name">Name</label>
+                <input class="axit-input" type="text" name="name" id="name">
               </div>
-              <button type="submit">Get started</button>
-            </form>
-
+               <div class="axit-form-item">
+                <label class="axit-label" for="email">Email</label>
+                <input class="axit-input" type="email" name="email" id="email">
+              </div>
+              <div class="axit-form-item">
+                <label class="axit-label" for="password">Password</label>
+                <input class="axit-input" type="password" name="password" id="password">
+              </div>
+            </div>
+            <button class="axit-button" type="submit">Get started</button>
+          </form>
         </div>
+
       </div>
     </div>
   </section>
@@ -425,6 +425,51 @@
   </section>
 </body>
 </html>
+
+
+<section class="contact">
+  <div class="container">
+    <h2 class="title"> 
+      Contact us
+    </h2>
+    <div class="subtitle">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+      </p>
+    </div>
+    <div class="contact-row">
+      <div class="contact-form">
+        <form action="#" name="free trail" methot="post">
+         <div class="contact-form-content">
+           <div class="contact-form-content-item">
+             <div class="contact-form-item">
+              <label class="contact-label" for="userName">Name</label>
+              <input class="contact-input" type="text" name="userName" id="userName">
+             </div>
+             <div class="contact-form-item">
+              <label class="contact-label" for="userEmail">Email</label>
+              <input class="contact-input" type="email" name="userEmail" id="userEmail">
+             </div>
+             <div class="contact-form-item">
+              <label class="contact-label" for="userPassword">Password</label>
+              <input class="contact-input" type="password" name="userPassword" id="userPassword">
+             </div>
+
+           </div>
+           <div class="contact-form-content-textarea">
+             <div class="contact-form-textarea">
+               <label class="contact-label" for="message">Message</label>
+               <textarea class="contact-textarea" name="message" id="message"></textarea>
+             </div>
+           </div>
+         </div>
+          <button class="contact-button" type="submit">Send massage</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <section class="footer">
   <div class="container">
