--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           <h1 class="axit-card-title">
             Modern axure template for beautiful prototypes
           </h1>
-        <div class="axit-card-text">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati!
-          </p>
-        </div>
-        <button class="axit-card-button">Dounload</button>
+          <div class="axit-card-text">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati!
+            </p>
+          </div>
+          <button class="axit-card-button">Dounload</button>
         </div>
 
         <div class="axit-form">
@@ -150,6 +150,53 @@
     <div class="container">
       <div class="tabs-row">
         <div class="tabs-card">
+          <div class="tabs-card-item">
+            <p>
+              Tab1
+            </p>
+          </div>
+          <div class="tabs-card-item">
+            <p>
+              Tab2
+            </p>
+          </div>
+          <div class="tabs-card-item">
+            <p>
+              Tab3
+            </p>
+          </div>
+        </div>
+        <div class="tabs-content">
+          <div class="tabs-content-transitioning">
+            <h2 class="tabs-content-title">
+              Tabs with soft transitioning effect
+            </h2>
+            <div class="tabs-content-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae tempore repellendus, deserunt provident ullam quis quos officia, voluptatem architecto dolore nihil eaque impedit veritatis hic et debitis voluptate temporibus possimus animi, dolores odit nobis laudantium. Laudantium.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cumque natus facere!
+              </p>
+            </div>
+            <button>
+
+            </button>
+          </div>
+          <div class="tabs-content-imj">
+            <div class="tabs-imj">
+              <img src="./img/tabs/image_right_u255@1X 1.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- <section class="tabs">
+    <div class="container">
+      <div class="tabs-row">
+        <div class="tabs-card">
           <div class="tabs-item">
             <p>tab 1</p>
           </div>
@@ -181,7 +228,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   
   <section class="awesome">
     <div class="container">
