Tabs section change

--- a/index.html
+++ b/index.html
@@ -173,14 +173,12 @@
             </h2>
             <div class="tabs-content-text">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae tempore repellendus, deserunt provident ullam quis quos officia, voluptatem architecto dolore nihil eaque impedit veritatis hic et debitis voluptate temporibus possimus animi, dolores odit nobis laudantium. Laudantium.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cumque natus facere!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat tempore, molestiae incidunt quae quo ut inventore ipsam dolorum dignissimos omnis quidem vitae veritatis, consequatur necessitatibus veniam? Officia atque enim similique, itaque inventore facere. Expedita, veniam? Laborum.<br><br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam, repellendus itaque? Unde.
               </p>
             </div>
-            <button>
-
+            <button class="tabs-content-button">
+              Downland
             </button>
           </div>
           <div class="tabs-content-imj">
